--- a/index.css
+++ b/index.css
@@ -21,10 +21,18 @@ h1{
     margin-bottom: 10px;
 }
 
-.bio, .info{
+.bio{
     text-align: justify;
     margin-top: 20vh;
     margin-bottom: 40vh;
+    margin-left: 15%;
+    margin-right: 15%;
+    height: 100vh;
+}
+
+.info{
+    text-align: justify;
+    margin-top: 20vh;
     margin-left: 15%;
     margin-right: 15%;
 }
