--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 .container{
 }
 
+body{
+    font-family: 'Lato', sans-serif;
+}
 #top{
     height: 100vh;
     text-align: center;
@@ -9,10 +12,12 @@
 h1{
     text-align: center;
     margin-bottom: 25px;
+    font-family: 'Space Mono', monospace;
 }
 
 #demo{
     margin-top: 25vh;
+    font-family: 'Space Mono', monospace;
 }
 
 #about{
