--- a/index.css
+++ b/index.css
@@ -29,7 +29,6 @@ h1{
 .bio{
     text-align: justify;
     margin-top: 20vh;
-    margin-bottom: 60vh;
     margin-left: 15%;
     margin-right: 15%;
     height: 100%;
@@ -44,7 +43,7 @@ h1{
 
 
 #projects{
-    margin-top: 60vh;
+    margin-top: 20vh;
 }
 
 #contact{
@@ -120,24 +119,58 @@ h1{
     background-repeat: no-repeat;
 }
 
-/* @media all and (max-width: 480px){
-    .clock,.screentime,.alpha,.word, .card{
-      height: 300px;
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .bio{
+        text-align: justify;
+        margin-top: 20vh;
+        margin-bottom: 60vh;
+        margin-left: 15%;
+        margin-right: 15%;
+        height: 100%;
+    }
+    #projects{
+        margin-top: 60vh;
+    }
+} 
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .bio{
+    text-align: justify;
+    margin-top: 20vh;
+    margin-bottom: 60vh;
+    margin-left: 15%;
+    margin-right: 15%;
+    height: 100%;
+    }
+    #projects{
+        margin-top: 60vh;
+    }
+} 
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    #projects{
+        margin-top: 20vh;
+    }
+} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    #projects{
+        margin-top: 20vh;
+    }
+} 
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    #projects{
+        margin-top: 20vh;
     }
 }
-
-@media all and (min-width: 481px) and (max-width: 768px){
-    .clock,.screentime,.alpha,.word, .card{
-      height: 600px;
-    }
-}
-
-@media all and (min-width:769px) and (max-width: 992px){
-    .clock,.screentime,.alpha,.word,{
-      height: 700px;
-    }
-} */
 
 .resume{
     width: 100%;
 }
+
